--- a/package.json
+++ b/package.json
@@ -16,5 +16,6 @@
   "devDependencies": {
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2"
-  }
+  },
+  "proxy":"http://localhost:4000"
 }
