--- a/package.json
+++ b/package.json
@@ -14,8 +14,9 @@
     "eject": "react-scripts eject"
   },
   "devDependencies": {
+    "echarts": "^3.7.1",
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2"
   },
-  "proxy":"http://localhost:4000"
+  "proxy": "http://localhost:4000"
 }
